--- a/main.html
+++ b/main.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <h1>Products</h1>
-  <ul id="product-list"></ul>
-  <hr />
-  <h2>Shopping Cart</h2>
-  <ul id="cart-list"></ul>
-  <button id="clear-cart-btn">Clear Cart</button>
 
-  <script src="script.js"></script>
+<html>
+
+<head>
+	<link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+	<!-- the entire body must be written by student -->
+  <h1>Login Form</h1>
+    <form id="loginForm">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" placeholder="Username" required>
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" placeholder="Password" required>
+
+        <label for="checkbox">
+            <input type="checkbox" id="checkbox" name="remember me">Remember me:
+        </label>
+
+        <input type="submit" id="submit" value="Submit">
+<!-- 		<button>Sub</button> -->
+    </form>	
+    <script type="text/javascript" src="./script.js">
+</script>
+
 </body>
+
 </html>
